Add TextRecognitionDataGenerator as submodule
Added the TextRecognitionDataGenerator repository as a new git submodule for data generation purposes. Updated .gitmodules to include the new submodule configuration.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deep-text-recognition-benchmark"]
 	path = deep-text-recognition-benchmark
 	url = https://github.com/EAAI-smart-spend/deep-text-recognition-benchmark
+[submodule "TextRecognitionDataGenerator"]
+	path = TextRecognitionDataGenerator
+	url = https://github.com/EAAI-smart-spend/TextRecognitionDataGenerator
