Add TRDG2DTRB as a new git submodule
Introduced the TRDG2DTRB repository as a submodule in the project by updating .gitmodules and adding the submodule reference. This allows for easier management and integration of the TRDG2DTRB codebase.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "TextRecognitionDataGenerator"]
 	path = TextRecognitionDataGenerator
 	url = https://github.com/EAAI-smart-spend/TextRecognitionDataGenerator
+[submodule "TRDG2DTRB"]
+	path = TRDG2DTRB
+	url = https://github.com/EAAI-smart-spend/TRDG2DTRB
