Add EasyOCR as a git submodule
Introduced the EasyOCR repository as a submodule to the project by updating .gitmodules and adding the submodule reference. This allows for easier management and integration of the EasyOCR codebase.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dataset"]
 	path = dataset
 	url = https://github.com/EAAI-smart-spend/ocr-dataset
+[submodule "EasyOCR"]
+	path = EasyOCR
+	url = https://github.com/EAAI-smart-spend/EasyOCR
