Add custom model and config, update .gitignore
Added user_network_dir/custom.py implementing a TPS-VGG-BiLSTM-CTC model and its config file custom.yaml. Added ch_tra.txt character set and a demo image. Updated .gitignore for Python cache and model files. Renamed saved model directory to include a date for versioning.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 pre_trained_models/*
 !pre_trained_models/README.md
+
+user_network_dir/*.pth
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
